change logger and add spell commandd